[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mr_tavily_search"
version = "0.1.0"
authors = [
    { name="runvnc" },
]
description = "Tavily search integration for Agent H"
requires-python = ">=3.9"
dependencies = [
    "langchain-tavily"
    "lxml_html_clean",
    "trafilatura"
]
